src/test/resources/invalid_tests/MissingIO2.cnna
architecture MissingIO2(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in[2]
    def output Q(0:1)^{classes} out[2]

    in[0] ->
    FullyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    Softmax() ->
    out[0]
}